Fix padding for content sections
Prevents right side content spilling out

--- a/_stylesheets/general.scss
+++ b/_stylesheets/general.scss
@@ -19,7 +19,7 @@ header, section, footer {
 }
 
 .content {
-  padding: 20px;
+  padding: 20px 0;
 }
 
 section.main {
